# gst-shark

./: .gitignore  AUTHORS  COPYING  COPYING.LESSER  MAINTAINERS  Makefile.am  NEWS  README  README.md  RELEASE  autogen.sh  autogen_ubuntux64.sh  configure.ac  gst-indent.sh  gst-shark.doap.in  meson.build  meson_options.txt
docs/: Makefile.am  meson.build  version.entities.in
eclipse/: README
eclipse/GstSharkFeature/: .project  feature.xml
eclipse/GstSharkSite/: .project  site.xml
eclipse/GstTuneFeature/: .project  feature.xml
eclipse/GstTuneSite/: .project  site.xml
eclipse/com.ridgerun.gstshark/: .project  plugin.xml
eclipse/com.ridgerun.gstshark/OSGI-INF/l10n/: bundle.properties
eclipse/com.ridgerun.gstshark/src/com/ridgerun/gstshark/: Activator.java  GstSharkBaseViewer.java  GstSharkCpuUsage.java  GstSharkCpuUsageView.java  GstSharkFrameRate.java  GstSharkFrameRateView.java  GstSharkView.java
eclipse/com.ridgerun.gstshark/src/com/ridgerun/gstshark/handlers/: OpenTrace.java  SampleHandler.java  ShowDotHandler.java
eclipse/com.ridgerun.gstshark/src/com/ridgerun/gsttune/handlers/: OpenTrace.java  ShowDotHandler.java
eclipse/com.ridgerun.gsttune/: .project  plugin.xml
eclipse/com.ridgerun.gsttune/OSGI-INF/l10n/: bundle.properties
eclipse/com.ridgerun.gsttune/src/com/ridgerun/gsttune/: Activator.java
eclipse/com.ridgerun.gsttune/src/com/ridgerun/gsttune/handlers/: SampleHandler.java  ShowDotHandler.java
gst-libs/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/gst/ctf/: Makefile.am  gstctf.c  gstctfcomponent.c  gstctfcomponent.h  gstctfengine.c  gstctfengine.h  gstctfrecord.c  gstctfrecord.h  gstctfrecordpriv.h
m4/: gst-shark.m4
plugins/: Makefile.am  meson.build
plugins/tracers/: Makefile.am  gstbitrate.c  gstbitrate.h  gstbuffer.c  gstbuffer.h  gstcpuusage.c  gstcpuusage.h  gstcpuusagecompute.c  gstcpuusagecompute.h  gstctf.c  gstctf.h  gstctfcomponent.c  gstctfengine.c  gstctfengine.h  gstdot.c  gstdot.h  gstframerate.c  gstframerate.h  gstgraphic.c  gstgraphic.h  gstidentity.c  gstidentity.h  gstinterlatency.c  gstinterlatency.h  gstinterlatencyaverage.c  gstinterlatencyaverage.h  gstlive.c  gstlive.h  gstliveprofiler.c  gstliveprofiler.h  gstliveunit.c  gstliveunit.h  gstparser.c  gstparser.h  gstperiodictracer.c  gstperiodictracer.h  gstplugin.c  gstproctime.c  gstproctime.h  gstproctimecompute.c  (+13 more)
refcpuusage/: datastream  metadata
refctf/: datastream  metadata
scripts/graphics/: cpuusage_process.m  framerate_process.m  gstshark-plot  gstshark-plot.m  load_serie_timestamp_value.m  plot_bitrate.m  plot_buffer.m  plot_cpuusage.m  plot_framerate.m  plot_framerate_cpuusage.m  plot_interlatency.m  plot_legend.m  plot_proctime.m  plot_queuelevel.m  plot_scheduling.m  plot_tracer.m  str2latex.m
tests/: Makefile.am  README  meson.build
tests/check/: Makefile.am  meson.build
tests/check/gst-shark/: gstdot.c
tests/examples/: Makefile.am  meson.build
tests/examples/dotviewer/: Makefile.am  dotviewer.c
tools/: Makefile.am
