# Feature options
option('enable-tests', type : 'boolean', value : true, description : 'Enable tests')
option('enable-check', type : 'boolean', value : true, description : 'Enable check tests, need the enable-tests flag set')
option('enable-plotting', type : 'feature', value : 'enabled', description : 'Enable pipeline plotting capabilities')
option('enable-docs', type : 'boolean', value : true, description : 'Enable to build documentation')

# Common options
option('package-name', type : 'string', yield : true,
       description : 'Package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'Package origin URL to use in plugins')
